[package]
name = "nostr-pow-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
cdk = "0.3.0"
cdk-sqlite = "0.3.0"
dotenvy = "0.15"
env_logger = "0.11"
hex = "0.4.3"
log = "0.4"
nostr-sdk = "0.34"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.209"
tokio = { version = "1.40", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1
debug = false
